<resources>
    <string name="app_name">Shishir 2020</string>
    <string name="facebook_app_id">130930918354429</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events">Events</string>
    <string name="schedule">Schedule</string>
    <string name="feed">Feed</string>
    <string name="team">Team</string>
    <string name="contact">Contact</string>
    <string name="action_share">Share</string>
    <string name="action_explore">Explore</string>
    <string name="register">Register</string>
    <string name="sponsors">Sponsors</string>

    <string name="share_text">\u0020 Shared from Shishir\'s official app</string>
    <string name="push_notifications_channel">Push notifications</string>
    <string name="event_image_transition">event_image</string>

</resources>
