<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/eventsListFragment"
        android:title="@string/events"
        app:showAsAction="always"
        android:orderInCategory="1" />

    <item
        android:id="@+id/eventsScheduleFragment"
        android:title="@string/schedule"
        app:showAsAction="always"
        android:orderInCategory="2" />

    <item
        android:id="@+id/shishirPageFeedFragment"
        android:title="@string/feed"
        app:showAsAction="always"
        android:orderInCategory="3" />

    <item
        android:id="@+id/teamsListFragment"
        android:title="@string/team"
        app:showAsAction="always"
        android:orderInCategory="4" />

    <item
        android:id="@+id/contactFragment"
        android:title="@string/contact"
        app:showAsAction="always"
        android:orderInCategory="5" />
</menu>